envoy/envoy.yaml
# 后台相关配置。 日志、监听地址、端口等
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

# envoy启动时的所有静态配置
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
      #filter数组，由name、config、typed_config组成，config、typed_config只能二选一
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # /前缀代理到service_2集群
              - match: { prefix: "/" }
                route: { host_rewrite: www.baidu.com, cluster: service_2 }
          http_filters:
          - name: envoy.router
  clusters:
  - name: service_2
    connect_timeout: 0.25s
    # 服务发现类型，dns
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.baidu.com
                port_value: 443
    tls_context:
      sni: www.baidu.com
